# NoUse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTIER_PLAN.md  LICENSE  PRODUCT_DESCRIPTION.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  llm_domain_session_handoff.md
.github/workflows/: tests.yml
IMG/: demo.cast
docs/: ARCHITECTURE_INSPIRATION.md  CLI_CHAT_DESIGN.md  FNC_IMPLEMENTATION_SPEC.md  LINKEDIN_POST.md  NOUSE_BRAIN_CONCEPT.md  NOUSE_DIFFERENTIATION.md  NOUSE_INSTALLATION_SPEC.md  NOUSE_ORGANIC_GROWTH.md  NOUSE_PLASTICITY_HYPOTHESIS.md  NOUSE_PREDICTION_MODEL.md  QUICKSTART.md  VIDEO_SCRIPT.md  VISUALIZATION_SPEC_V2.md  WHY_NOT_NN_STORAGE.md
docs/stories/: 1-1-nouse-core-package.md
eval/: RESULTS.md  generate_questions.py  qb_deep_extracted_relations.json  quantum_biology_content.json  quantum_biology_deep.json  questions.json  questions_original.json  questions_qb_hard12.json  questions_quantum_biology.json  questions_quantum_biology_injection.json  run_eval.py  scorer.py  seed_domain.py
eval/qb_texts/: qbio-avian-magnetoreception.txt  qbio-cellular-respiration.txt  qbio-decoherence-biology.txt  qbio-dna-mutations.txt  qbio-enzyme-tunneling.txt  qbio-frontiers.txt  qbio-olfaction-vibration.txt  qbio-photosynthetic-coherence.txt
eval/results/: qb_benchmark_20260406_081339.json  qb_hard12_judged_20260406_083420.json  qb_injection_keyword_20260406_093444.json  run_20260402_163903.json  run_20260403_094211.json  run_20260406_080011.json  run_20260406_080212.json  run_20260407_110642.json  run_20260407_120708.json  run_20260407_124721.json  run_20260407_125001.json
examples/: README.md  basic_query.py  ingest_document.py  with_ollama.py  with_openai.py
scripts/: demo.py  make_gif.sh  migrate_openclaw_to_nouse.py
src/nouse/: __init__.py  brian2_bridge.py  client.py  inject.py  learning_coordinator.py
src/nouse/brain_sync/: transporter.py
src/nouse/cli/: ask.py  chat.py  companion.py  main.py  run.py  run_repl.py  viz.py
src/nouse/config/: env.py  paths.py
src/nouse/daemon/: auto_skill.py  decomposition.py  disk_mapper.py  evidence.py  extractor.py  file_text.py  ghost_q.py  graph_enricher.py  hitl.py  initiative.py  journal.py  kickstart.py  lock.py  main.py  mission.py  morning_report.py  nightrun.py  node_context.py  node_deepdive.py  node_inbox.py  (+6 more)
systemd/: nouse-backup.service  nouse-backup.timer  nouse-daemon.service  nouse-daemon.timer  nouse-eval.service  nouse-eval.timer  nouse-watchdog.service  nouse-watchdog.timer
tests/: test_inject_attach.py  test_nouse_kernel.py  test_plasticity_live.py
tests/cli/: test_change_model.py  test_chat.py  test_chat_tools.py  test_client_brain_db.py  test_client_clawbot.py  test_client_stream_chat.py  test_client_system_wake.py  test_main.py  test_main_brain.py  test_main_clawbot.py  test_main_start.py  test_output_trace_cli.py
tests/daemon/: test_auto_skill.py  test_extractor_fallback.py  test_hitl.py  test_journal_living.py  test_mission.py  test_nightly_mission_scorecard.py  test_output_trace.py  test_research_queue_hitl.py  test_research_queue_seed.py  test_source_throttle.py  test_system_events.py  test_watch_paths.py  test_web_text.py
tests/field/: test_knowledge_contract.py  test_semantic_bisociation.py
tests/ingress/: test_allowlist.py  test_clawbot.py
tests/insights/: test_extractor.py
tests/llm/: test_model_capabilities.py  test_model_router_quality.py  test_policy_usage.py  test_wrapper.py
tests/mcp_gateway/: test_kernel_tools.py  test_local_fs_tools.py  test_mcp_server.py  test_mcp_stdio_e2e.py  test_web_tools.py
tests/memory/: test_store.py
tests/ollama_client/: test_provider_model_ref.py
tests/self_layer/: test_living_core.py
tests/session/: test_state.py
tests/trace/: test_trace_problem_set.py
tests/web/: test_agent_grounding_guards.py  test_graph_center_state.py  test_insights_recent_api.py  test_numeric_choice_resolution.py
(+68 files in other folders)
