[project]
name = "nouse"
version = "0.2.0"
description = "The Cognitive Substrate Framework for Model-Agnostic AI — the missing link to AGI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Björn Wikström", email = "bjorn@base76.se" }
]
keywords = ["ai", "cognition", "memory", "brain", "agi", "mcp", "plasticity", "graph", "knowledge-graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "ollama>=0.6.1",
  "rich>=14.3.3",
  "ruamel-yaml>=0.19.1",
  "typer>=0.24.1",
  "kuzu>=0.11.0",
  "watchdog>=4.0.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "pyvis>=0.3.2",
  "duckduckgo-search>=8.1.1",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "lxml>=6.0.2",
  "pypdf>=4.2.0",
  "fastapi>=0.135.2",
  "uvicorn>=0.42.0",
  "pydantic>=2.12.5",
  "pandas>=3.0.1",
  "flask>=3.0.0",
  "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "maturin>=1.12.6",
]
brian2 = [
  "brian2>=2.5.0",
]

[project.scripts]
nouse        = "nouse.cli.main:app"
nouse-brain  = "nouse.daemon.main:main"
nouse-server = "nouse.web.server:main"

[project.urls]
Homepage   = "https://github.com/bjornwikstrom/NoUse"
Repository = "https://github.com/bjornwikstrom/NoUse"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
